--- a/Laba3/app/src/main/res/layout/activity_main.xml
+++ b/Laba3/app/src/main/res/layout/activity_main.xml
@@ -7,13 +7,58 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
+    <LinearLayout
+        android:layout_width="409dp"
+        android:layout_height="729dp"
+        android:gravity="center_horizontal"
+        android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent">
 
+        <TextView
+            android:id="@+id/textView"
+            style="@style/BigSecondaryTextStyle"
+            android:layout_weight="1"
+            android:text="@string/firstTextView" />
+
+        <TextView
+            android:id="@+id/textView2"
+            style="@style/SmallPrimaryTextStyle"
+            android:layout_weight="1"
+            android:text="@string/secondTextview" />
+
+        <TextView
+            android:id="@+id/textView3"
+            style="@style/SmallPrimaryTextStyle"
+            android:layout_weight="1"
+            android:text="@string/thirdTextview" />
+
+        <TextView
+            android:id="@+id/textView4"
+            style="@style/BigSecondaryTextStyle"
+            android:layout_weight="1"
+            android:text="@string/lastTextview" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/buttonOk" />
+
+            <Button
+                android:id="@+id/button2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/buttonThen" />
+        </LinearLayout>
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
