--- a/Laba3/app/src/main/res/values/themes.xml
+++ b/Laba3/app/src/main/res/values/themes.xml
@@ -6,4 +6,20 @@
     </style>
 
     <style name="Theme.Laba3" parent="Base.Theme.Laba3" />
+    <style name="BigSecondaryTextStyle">
+        <item name="android:textColor">@color/design_default_color_secondary</item>
+        <item name="android:textSize">24sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:gravity">center</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_width">wrap_content</item>
+    </style>
+
+    <style name="SmallPrimaryTextStyle">
+        <item name="android:textColor">@color/design_default_color_primary</item>
+        <item name="android:textSize">8sp</item>
+        <item name="android:gravity">center</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_width">wrap_content</item>
+    </style>
 </resources>
