--- a/Laba2/app/src/main/res/layout/activity_main.xml
+++ b/Laba2/app/src/main/res/layout/activity_main.xml
@@ -25,17 +25,9 @@
             app:layout_constraintTop_toTopOf="parent">
 
             <ImageView
-                android:id="@+id/backView"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:importantForAccessibility="no"
-                app:srcCompat="@color/design_default_color_primary_dark" />
-
-
-            <ImageView
                 android:id="@+id/androidIcon"
                 android:layout_width="match_parent"
-                android:layout_height="138dp"
+                android:layout_height="154dp"
                 android:contentDescription="@string/profile_avatar"
                 app:srcCompat="@android:mipmap/sym_def_app_icon"
                 tools:ignore="VisualLintBounds" />
@@ -47,10 +39,10 @@
             android:id="@+id/bioLinearLayout"
             android:layout_width="match_parent"
             android:layout_height="80dp"
-            android:orientation="vertical"
-            android:layout_marginLeft="8dp"
+            android:layout_marginLeft="25dp"
             android:layout_marginTop="8dp"
-            android:layout_marginRight="8dp"
+            android:layout_marginRight="25dp"
+            android:orientation="vertical"
             android:useDefaultMargins="true"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -80,13 +72,14 @@
 
         </LinearLayout>
 
+
         <LinearLayout
             android:id="@+id/bodyLinearLayout"
             android:layout_width="match_parent"
             android:layout_height="40dp"
-            android:layout_marginLeft="8dp"
+            android:layout_marginLeft="15dp"
             android:layout_marginTop="8dp"
-            android:layout_marginRight="8dp"
+            android:layout_marginRight="15dp"
             android:orientation="horizontal"
             android:useDefaultMargins="true"
 
@@ -94,94 +87,49 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/bioLinearLayout">
 
-            <TextView
-                android:id="@+id/photoTextView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:text="@string/photo"
-                />
+            <Button
+                android:id="@+id/photoTab"
+                style="@style/TabButtonStyle"
+                android:text="@string/photo"/>
 
-            <TextView
-                android:id="@+id/projectsTextView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:text="@string/projects"
-                />
+            <Button
+                android:id="@+id/projectsTab"
+                style="@style/TabButtonStyle"
+                android:text="@string/projects"/>
 
-            <TextView
-                android:id="@+id/achievementsTextView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:text="@string/achievements"
-                />
+            <Button
+                android:id="@+id/achievementsTab"
+                style="@style/TabButtonStyle"
+                android:text="@string/achievements"/>
         </LinearLayout>
 
+
         <GridLayout
-            android:id="@+id/gridLayout"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="8dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginRight="8dp"
-            android:columnCount="3"
-            android:horizontalSpacing="8dp"
-            android:useDefaultMargins="true"
-            android:verticalSpacing="8dp"
+            android:id="@+id/meGridLayout"
+            style="@style/GridViewStyle"
+            android:visibility="visible"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/bodyLinearLayout">
 
-            <ImageView
-                android:id="@+id/imageView1"
-                android:layout_width="112dp"
-                android:layout_height="112dp"
-                android:layout_row="0"
-                android:layout_column="0"
-                android:importantForAccessibility="no"
-                app:srcCompat="@drawable/_024_09_28_14_55_39" />
+        </GridLayout>
 
-            <ImageView
-                android:id="@+id/imageView2"
-                android:layout_width="112dp"
-                android:layout_height="112dp"
-                android:layout_row="0"
-                android:layout_column="1"
-                android:importantForAccessibility="no"
-                app:srcCompat="@drawable/_024_09_28_14_55_39" />
+        <GridLayout
+            android:id="@+id/projectGridLayout"
+            style="@style/GridViewStyle"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/bodyLinearLayout">
 
-            <ImageView
-                android:id="@+id/imageView3"
-                android:layout_width="112dp"
-                android:layout_height="112dp"
-                android:importantForAccessibility="no"
-                app:srcCompat="@drawable/_024_09_28_14_55_39" />
+        </GridLayout>
 
-            <ImageView
-                android:id="@+id/imageView4"
-                android:layout_width="112dp"
-                android:layout_height="112dp"
-                android:importantForAccessibility="no"
-                app:srcCompat="@drawable/_024_09_28_14_55_39" />
+        <GridLayout
+            android:id="@+id/achievementGridLayout"
+            style="@style/GridViewStyle"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/bodyLinearLayout">
 
-            <ImageView
-                android:id="@+id/imageView5"
-                android:layout_width="112dp"
-                android:layout_height="112dp"
-                android:importantForAccessibility="no"
-                app:srcCompat="@drawable/_024_09_28_14_55_39" />
-
-            <ImageView
-                android:id="@+id/imageView6"
-                android:layout_width="112dp"
-                android:layout_height="112dp"
-                android:importantForAccessibility="no"
-                app:srcCompat="@drawable/_024_09_28_14_55_39" />
         </GridLayout>
 
 
