--- a/Laba3/app/src/main/res/layout/activity_main.xml
+++ b/Laba3/app/src/main/res/layout/activity_main.xml
@@ -50,12 +50,14 @@
 
             <Button
                 android:id="@+id/button"
+                style="@style/CustomButtonStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/buttonOk" />
 
             <Button
                 android:id="@+id/button2"
+                style="@style/CustomButtonStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/buttonThen" />
