--- a/Laba3/app/src/main/res/values/themes.xml
+++ b/Laba3/app/src/main/res/values/themes.xml
@@ -22,4 +22,11 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_width">wrap_content</item>
     </style>
+
+    <style name="CustomButtonStyle">
+        <item name="android:background">@drawable/btn_selector</item>
+        <item name="android:textColor">@color/text_color</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:padding">10dp</item>
+    </style>
 </resources>
