feat: done dop2 in lab 3

--- a/Laba3Task2/app/src/main/res/layout/activity_main.xml
+++ b/Laba3Task2/app/src/main/res/layout/activity_main.xml
@@ -7,27 +7,41 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <ScrollView
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:orientation="vertical">
 
-        <LinearLayout
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="410dp"
+            android:layout_height="406dp"
+            app:srcCompat="@drawable/_024_09_10_22_38_31"
+            tools:ignore="ContentDescription" />
+
+        <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:orientation="vertical" >
+            android:layout_height="wrap_content">
 
-            <ImageView
-                android:id="@+id/imageView"
-                android:layout_width="410dp"
-                android:layout_height="406dp"
-                app:srcCompat="@drawable/_024_09_10_22_38_31" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal"
+                android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/textView"
-                style="@style/PoemString"
-                android:text="@string/poem" />
-        </LinearLayout>
-    </ScrollView>
+                <TextView
+                    android:id="@+id/textView"
+                    style="@style/PoemString"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginEnd="16dp"
+                    android:text="@string/poem" />
+            </LinearLayout>
+        </ScrollView>
+    </LinearLayout>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
